Fix spacing for resume

--- a/src/scss/components/_resume.scss
+++ b/src/scss/components/_resume.scss
@@ -2,6 +2,7 @@
   font-size: 3rem;
   margin: 0 auto;
   letter-spacing: 0;
+
   @include sm {
     font-size: 3.8rem;
   }
@@ -18,18 +19,20 @@
 .resume-details {
   display: flex;
   flex-direction: column;
+
   @include sm {
     line-height: 2.1rem;
   }
 }
 .resume-section-title {
-  font-family: 'Playfair Display';
-  font-style: italic;
+  font-family: "Playfair Display";
   font-size: 2rem;
+  font-style: italic;
   color: #555;
 }
 .role-logo {
   max-width: 12rem;
+
   filter: grayscale(1);
   &.logo-background {
     padding: 0.5rem;
@@ -39,6 +42,7 @@
 .role-title {
   font-size: 1.3rem;
   margin-bottom: 0;
+
   @include sm {
     letter-spacing: 1rem;
   }
@@ -46,8 +50,9 @@
 .role-dates {
   font-size: 1rem;
   line-height: 2rem;
-  color: #979797;
   letter-spacing: 0.1rem;
+  color: #979797;
+
   @include sm {
     letter-spacing: 0.5rem;
   }
